# talklib

./: .coverage  .gitignore  Example.bat  LICENSE.txt  README.md  __init__.py  conftest.py  del.py  ev.py  pyproject.toml  requirements.txt  rss_segment.py  rss_show.py  show.py  testing.py  utils.py
.github/workflows/: python-app.yml  talklib.yml  talklib_PR.yml
src/: show.py  utils.py
src/talklib/: __init__.py  cli.py  ev.py  ffmpeg.py  gui.py  notify.py  pod.py  show.py  utils.py
src/talklib/tests/integration/: test_permalink.py
src/talklib/tests/unit/: test_misc.py
src/tests/: conftest.py  mock.py
src/tests/integration/: test_local.py  test_permalink.py  test_rss.py
src/tests/pod/: mock.py  mock.xml  test_pod.py
src/tests/unit/: test_local.py  test_misc.py  test_permalink.py  test_rss.py  test_utils.py
talklib/: __init__.py  show.py  utils.py
talklib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
talklib/tests/unit/: test_local.py  test_misc.py  test_permalink.py  test_rss.py
tests/: mock.py  test_permalink.py  test_rss.py
tests/integration/: mock.py  remove_ev.py  test_a  test_local.py  test_permalink.py  test_rss.py
tests/local/: test_local.py
tests/local/audio/: warning.txt
tests/permalink/: test_permalink.py
tests/rss/: test_rss.py
tests/unit/: mock.py  test_local.py  test_misc.py  test_permalink.py  test_rss.py  test_utils.py
