[project]
name = "talklib"
version = "0.0.9"
description = "A package to automate processing of shows/segments airing on the TL"
license = {file = "LICENSE.txt"}
readme = "README.md"
authors = [{name = "Ben Weddle", email = "ben.weddle@gmail.com"}]
requires-python = ">=3.10"
dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["talklib*"]
exclude = [".tests*"]