[project]
name = "talklib"
version = "1.3.0"
description = "A package to automate processing of shows/segments airing on the TL"
readme = "README.md"
license = {file = "LICENSE.txt"}
authors = [{name = "Ben Weddle", email = "ben.weddle@gmail.com"}]
maintainers = [{name = "Ben Weddle", email = "ben.weddle@gmail.com"}]
requires-python = ">=3.10"
dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
Repository = "https://github.com/talkinglibrary/talklib"
Issues = "https://github.com/talkinglibrary/talklib/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["talklib*"]
exclude = [".tests*"]
